components/platform/keycloak-operator/overlays/dev/operator-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: operator-netpol
  namespace: platform-operators
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

  ingress: []

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
